# atlast-crypto-wallet

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
atlast-crypto/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  WALLYCORE-EXAMPLE  atlast-crypto  cmake_install.cmake  main.c
atlast-crypto/atl_common/: common_atl.c
atlast-crypto/atl_extensions/: extensions_atl.c  extensions_atl.h
atlast-crypto/atl_primitives/: Untitled.ipynb  aes.i  aes_wrap.c  aes_wrap.h  base32.i  base32_wrap.c  base32_wrap.h  base58.i  base58_wrap.c  base58_wrap.h  bignum.i  bignum_wrap.c  bignum_wrap.h  bip32.i  bip32_wrap.c  bip32_wrap.h  bip39.i  bip39_wrap.c  bip39_wrap.h  common_atl.h  crypto_atl.c  crypto_atl.h  ecdsa.i  ecdsa_atl.c  ecdsa_atl.h  ecdsa_wrap.c  ecdsa_wrap.h  example.i  example.py  hasher.i  hasher_wrap.c  hasher_wrap.h  hmac.i  hmac_drbg.i  hmac_drbg_wrap.c  hmac_drbg_wrap.h  hmac_wrap.c  hmac_wrap.h  sha2.i  sha2_wrap.c  (+8 more)
atlast-crypto/atl_primitives/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
atlast-crypto/examples/: aes.md  keys_and_addresses.md
atlast-crypto/wrap_crypto/: bip32.txt  bip39.txt  boost_python_gen.py  common_wrapper.h  wrap.py  wrap_aes.c  wrap_aes.h  wrap_base32.c  wrap_base32.h  wrap_bignum.c  wrap_bignum.h  wrap_bip32.c  wrap_bip32.h  wrap_bip39.c  wrap_bip39.h  wrap_c.mako  wrap_ecdsa.c  wrap_ecdsa.h  wrap_hasher.c  wrap_hasher.h  wrap_hmac.c  wrap_hmac.h  wrap_hmac_drbg.c  wrap_hmac_drbg.h  wrap_sha2.c  wrap_sha2.h  wrap_sha3.c  wrap_sha3.h  wrap_slip39.c  wrap_slip39.h
atlast-crypto/wrap_crypto/atlast_wrapper/: wrap.py  wrap_h.mako
atlast-crypto/wrap_libwally/: common_wrapper.h  wrap_wally_address.c  wrap_wally_bip32.c  wrap_wally_bip38.c  wrap_wally_bip38.h  wrap_wally_bip39.c  wrap_wally_core.c  wrap_wally_crypto.c  wrap_wally_crypto.h  wrap_wally_transaction.c  wrap_wally_transaction.h
atlast-crypto/wrap_libwally/wrapper/: wrap_c.mako
atlast-crypto/wrap_secp256k1/: wrap_c.mako  wrap_secp256k1.c  wrap_secp256k1.h
atlast-crypto/wrap_wallycore/: wallycore_common.h  wrap_wally_address.c  wrap_wally_address.h  wrap_wally_bip32.c  wrap_wally_bip32.h  wrap_wally_bip38.c  wrap_wally_bip39.c  wrap_wally_bip39.h  wrap_wally_core.c  wrap_wally_core.h  wrap_wally_crypto.c  wrap_wally_transaction.c
atlast-forth/atlast-1.2/: CMakeLists.txt  CTestTestfile.cmake  Makefile  atlast-console  atlast.c  atldef.h  cmake_install.cmake
atlast-forth/atlast-2.0/: CMakeLists.txt
crypto/: CMakeLists.txt  CTestTestfile.cmake  Makefile  bip32.h  cmake_install.cmake  f.txt
crypto/aes/: aes.h
libwally-core/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
libwally-core/src/secp256k1/src/modules/ecdh/: main_impl.h
main/: CMakeLists.txt  Makefile  cmake_install.cmake  main.c
main/atl_primitives/: crypto_atl.c  crypto_atl.h
