
cmake_minimum_required(VERSION 3.18)

project(atlast-crypto VERSION 0.0.1)
# use this to generate file list: 
#  ls ./atl_primitives/*wrap.c | sort | uniq | sed -e 's_\./_"_' |  sed -e 's_$_"_'
add_executable(${PROJECT_NAME}
    main.c
    # "atl_primitives/aes_wrap.c"
    # "atl_primitives/base32_wrap.c"
    # "atl_primitives/base58_wrap.c"
    # "atl_primitives/bignum_wrap.c"
    # "atl_primitives/bip32_wrap.c"
    # "atl_primitives/bip39_wrap.c"
    # "atl_primitives/ecdsa_wrap.c"
    # "atl_primitives/hasher_wrap.c"
    # "atl_primitives/hmac_drbg_wrap.c"
    # "atl_primitives/hmac_wrap.c"
    # "atl_primitives/sha2_wrap.c"
    # "atl_primitives/sha3_wrap.c"
    # "atl_primitives/slip39_wrap.c"
    
    # "atl_primitives/common_atl.c"


#     "wrap_crypto/wrap_address.c"
# "wrap_crypto/wrap_aes.c"
# "wrap_crypto/wrap_aesopt.c"
# "wrap_crypto/wrap_aestab.c"
# "wrap_crypto/wrap_aestst.c"
# "wrap_crypto/wrap_base32.c"
# "wrap_crypto/wrap_base58.c"
# "wrap_crypto/wrap_bignum.c"
# "wrap_crypto/wrap_bip32.c"
"wrap_crypto/wrap_bip39.c"
# "wrap_crypto/wrap_bip39_english.c"
# "wrap_crypto/wrap_blake256.c"
# "wrap_crypto/wrap_blake2b.c"
# "wrap_crypto/wrap_blake2_common.c"
# "wrap_crypto/wrap_blake2s.c"
# "wrap_crypto/wrap_cash_addr.c"
# "wrap_crypto/wrap_chacha20poly1305.c"
# "wrap_crypto/wrap_chacha_drbg.c"
# "wrap_crypto/wrap_check_mem.c"
# "wrap_crypto/wrap_curve25519-donna-32bit.c"
# "wrap_crypto/wrap_curve25519-donna-helpers.c"
# "wrap_crypto/wrap_curve25519-donna-scalarmult-base.c"
# "wrap_crypto/wrap_curves.c"
# "wrap_crypto/wrap_ecdsa.c"
# "wrap_crypto/wrap_ecrypt-config.c"
# "wrap_crypto/wrap_ecrypt-machine.c"
# "wrap_crypto/wrap_ecrypt-portable.c"
# "wrap_crypto/wrap_ecrypt-sync.c"
# "wrap_crypto/wrap_ecrypt-types.c"
# "wrap_crypto/wrap_ed25519.c"
# "wrap_crypto/wrap_ed25519-donna-32bit-tables.c"
# "wrap_crypto/wrap_ed25519-donna-basepoint-table.c"
# "wrap_crypto/wrap_ed25519-donna.c"
# "wrap_crypto/wrap_ed25519-donna-impl-base.c"
# "wrap_crypto/wrap_ed25519-donna-portable.c"
# "wrap_crypto/wrap_ed25519-hash-custom.c"
# "wrap_crypto/wrap_ed25519-hash-custom-keccak.c"
# "wrap_crypto/wrap_ed25519-hash-custom-sha3.c"
# "wrap_crypto/wrap_ed25519-keccak.c"
# "wrap_crypto/wrap_ed25519-sha3.c"
# "wrap_crypto/wrap_groestl.c"
# "wrap_crypto/wrap_groestl_internal.c"
# "wrap_crypto/wrap_hasher.c"
# "wrap_crypto/wrap_hmac.c"
# "wrap_crypto/wrap_hmac_drbg.c"
# "wrap_crypto/wrap_int-util.c"
# "wrap_crypto/wrap_mainwindow.c"
# "wrap_crypto/wrap_memzero.c"
# "wrap_crypto/wrap_modm-donna-32bit.c"
# "wrap_crypto/wrap_monero.c"
# "wrap_crypto/wrap_nem.c"
# "wrap_crypto/wrap_nist256p1.c"
# "wrap_crypto/wrap_options.c"
# "wrap_crypto/wrap_pbkdf2.c"
# "wrap_crypto/wrap_poly1305-donna-32.c"
# "wrap_crypto/wrap_poly1305-donna.c"
# "wrap_crypto/wrap_rand.c"
# "wrap_crypto/wrap_range_proof.c"
# "wrap_crypto/wrap_rc4.c"
# "wrap_crypto/wrap_rfc6979.c"
# "wrap_crypto/wrap_rfc7539.c"
# "wrap_crypto/wrap_ripemd160.c"
# "wrap_crypto/wrap_script.c"
# "wrap_crypto/wrap_secp256k1.c"
# "wrap_crypto/wrap_segwit_addr.c"
# "wrap_crypto/wrap_serialize.c"
# "wrap_crypto/wrap_sha2.c"
# "wrap_crypto/wrap_sha3.c"
# "wrap_crypto/wrap_shamir.c"
# "wrap_crypto/wrap_slip39.c"
# "wrap_crypto/wrap_slip39_wordlist.c"
# "wrap_crypto/wrap_test_check_cardano.c"
# "wrap_crypto/wrap_test_check_cashaddr.c"
# "wrap_crypto/wrap_test_check_monero.c"
# "wrap_crypto/wrap_test_check_segwit.c"
# "wrap_crypto/wrap_xmr.c"

)

target_link_libraries(${PROJECT_NAME} atlast crypto m)

# -g -Wall -DMEMSTAT -DALIGNMENT -DEXPORT -DREADONLYSTRINGS
add_definitions(-g -Wall -DMEMSTAT -DALIGNMENT -DEXPORT -DREADONLYSTRINGS -DNOMEMCHECK)
# -DNOMEMCHECK
include_directories("../atlast-forth/atlast-1.2")
include_directories("../crypto")