
cmake_minimum_required(VERSION 3.18)

project(crypto VERSION 0.0.1)

# add_definitions(-g -Wall -DMEMSTAT -DALIGNMENT -DEXPORT -DREADONLYSTRINGS)

add_library("${PROJECT_NAME}"
            "address.c"
            "aes/aescrypt.c"
            "aes/aeskey.c"
            "aes/aes_modes.c"
            "aes/aestab.c"
            "aes/aestst.c"
            "base32.c"
            "base58.c"
            "bignum.c"
            "bip32.c"
            "bip39.c"
            "blake256.c"
            "blake2b.c"
            "blake2s.c"
            "cash_addr.c"
            "chacha20poly1305/chacha20poly1305.c"
            "chacha20poly1305/chacha_merged.c"
            "chacha20poly1305/poly1305-donna.c"
            "chacha20poly1305/rfc7539.c"
            "chacha_drbg.c"
            "curves.c"
            "ecdsa.c"
            "ed25519-donna/curve25519-donna-32bit.c"
            "ed25519-donna/curve25519-donna-helpers.c"
            "ed25519-donna/curve25519-donna-scalarmult-base.c"
            "ed25519-donna/ed25519.c"
            "ed25519-donna/ed25519-donna-32bit-tables.c"
            "ed25519-donna/ed25519-donna-basepoint-table.c"
            "ed25519-donna/ed25519-donna-impl-base.c"
            "ed25519-donna/ed25519-keccak.c"
            "ed25519-donna/ed25519-sha3.c"
            "ed25519-donna/modm-donna-32bit.c"
            "fuzzer/fuzzer.c"
            "groestl.c"
            "hasher.c"
            "hmac.c"
            "hmac_drbg.c"
            "memzero.c"
            "monero/base58.c"
            "monero/range_proof.c"
            "monero/serialize.c"
            "monero/xmr.c"
            "nem.c"
            "nist256p1.c"
            "pbkdf2.c"
            "rand.c"
            "rc4.c"
            "rfc6979.c"
            "ripemd160.c"
            "script.c"
            "secp256k1.c"
            "segwit_addr.c"
            "sha2.c"
            "sha3.c"
            "shamir.c"
            "slip39.c"
            # "tests/test_check.c"
            # "tests/test_openssl.c"
            # "tests/test_speed.c"
            # "tools/bip39bruteforce.c"
            # "tools/mktable.c"
            # "tools/xpubaddrgen.c"
)
include_directories( . 
    "monero"
    "chacha20poly1305"
    # "tools"
    "fuzzer"
    # "tests"
    # "tests/wycheproof"
    "ed25519-donna"
    # "gui"
    "aes"

)
